Big ol commit with not much information
Major refactor of the whole codebase:
* Popup will not login any more
* Popup displays a clickable list of found secrets
* Options page can be used to login and select secret paths
* Secrets paths will be checked on option change
* Credential fill-in on pages possible now
  * Click on the respective item in the popup list
* LDAP login to Vault possible now
* Credentials now stored in Chrome storage
  * Username and Vault server address synced
    accross devices!

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ button {
     border-radius: 4px;
 }
 input {
-display: table-cell; width="100%";
+display: table-cell;
+width: "100%";
 padding: 2px;
 margin: 2px;
 color: rgb(35, 81, 141);
@@ -54,6 +55,28 @@ font-style: inherit;
 text-decoration: inherit;
 text-align: center;
 line-height: 1.15em;
+}
+
+#secretList {
+padding: 5px;
+color: rgb(96, 144, 206);
+font-size: 16px;
+font-weight: 600;
+font-family: Verdana, Geneva, sans-serif;
+font-style: inherit;
+text-decoration: inherit;
+/* text-align: center; */
+line-height: 2em;
+}
+
+#secretList ul {
+  margin: 0;
+  list-style: none;
+}
+
+#disabled {
+	text-decoration: line-through;
+	color: red;
 }
 
 #mounts {
